[package]
name = "bundler"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
serde_json = "1.0.132"
sha = "1.0.3"
swc_atoms = "2.0.0"
swc_bundler = { version = "5.0.0", features = ["concurrent"] }
swc_common = { version = "4.0.0", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "4.0.1"
swc_ecma_codegen = "4.0.2"
swc_ecma_loader = "4.0.0"
swc_ecma_parser = "5.0.0"
swc_ecma_transforms_base = "5.0.1"
swc_ecma_transforms_typescript = "5.0.0"
swc_ecma_visit = "4.0.0"
ureq = "2.10.1"
url = "2.5.3"
