[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
arc-swap = "1.7.1"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
dashmap = "6.1.0"
dino-macros = { workspace = true }
indexmap = { version = "2.6.0", features = ["serde"] }
matchit = "0.8.5"
rquickjs = { version = "0.8.1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = "2.0.3"
tokio = { workspace = true }
tower = "0.5.1"
tracing = { workspace = true }
typed-builder = "0.20.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }
