[package]
name = "dino"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
askama = "0.12.1"
blake3 = "1.5.4"
bundler = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
dino-server = { workspace = true }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
tokio = { workspace = true }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
